--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "csvtojson": "^2.0.10",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "json2csv": "^5.0.6",
     "jsonwebtoken": "^8.5.1",
     "keplerjs": "^1.0.8",
     "mongoose": "^5.12.3",
