--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "validator": "^13.5.2"
+  },
+  "devDependencies": {
+    "mongodb-memory-server-core": "^6.9.6"
   }
 }
