--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^8.5.1",
     "keplerjs": "^1.0.8",
     "mongoose": "^5.12.3",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-github": "^1.1.0",
